# obsidian-task-reminders

./: .dockerignore  .gitignore  Dockerfile  README.md  config.sample.yml  docker-compose.yml  map.md  pyproject.toml
src/: config.py  main.py  parser.py  scheduler.py  sender.py  task_store.py  watcher.py
tests/: test_config.py  test_full_integration.py  test_parser.py  test_sender.py  test_task_store.py  test_watcher_integration.py
